Add staff photos

--- a/index.html
+++ b/index.html
@@ -13,44 +13,93 @@
 
   
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/arvinder.jpg">
       <div class="name">
-        Person A
+        arvinder
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/charlyne_fothergill.jpg">
       <div class="name">
-        Person B
+        charlyne_fothergill
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/davidvandusen.jpg">
       <div class="name">
-        Person C
+        davidvandusen
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/don_burks.jpg">
       <div class="name">
-        Person D
+        don_burks
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/jeremy_shaki.jpg">
       <div class="name">
-        Person E
+        jeremy_shaki
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/khurram_virani.jpg">
       <div class="name">
-        Person F
+        khurram_virani
+      </div>
+    </div>
+
+    <div class="member">
+      <img src="images/landon.jpg">
+      <div class="name">
+        landon
+      </div>
+    </div>
+
+    <div class="member">
+      <img src="images/michael_steele.jpg">
+      <div class="name">
+        michael_steele
+      </div>
+    </div>
+
+    <div class="member">
+      <img src="images/monica.jpg">
+      <div class="name">
+        monica
+      </div>
+    </div>
+
+    <div class="member">
+      <img src="images/murat.jpg">
+      <div class="name">
+        murat
+      </div>
+    </div>
+
+    <div class="member">
+      <img src="images/rosy.jpg">
+      <div class="name">
+        rosy
+      </div>
+    </div>
+
+    <div class="member">
+      <img src="images/sherman.jpg">
+      <div class="name">
+        sherman
+      </div>
+    </div>
+
+    <div class="member">
+      <img src="images/sylvia_rayner.jpg">
+      <div class="name">
+        sylvia_rayner
       </div>
     </div>
 
