Add hover effect

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   
     <div class="member">
       <img src="images/arvinder.jpg">
+      <img src="images/arvinder2.jpg">
       <div class="name">
         arvinder
       </div>
@@ -21,6 +22,7 @@
 
     <div class="member">
       <img src="images/charlyne_fothergill.jpg">
+      <img src="images/charlyne_fothergill2.jpg">
       <div class="name">
         charlyne_fothergill
       </div>
@@ -28,6 +30,7 @@
 
     <div class="member">
       <img src="images/davidvandusen.jpg">
+      <img src="images/davidvandusen2.jpg">
       <div class="name">
         davidvandusen
       </div>
@@ -35,6 +38,7 @@
 
     <div class="member">
       <img src="images/don_burks.jpg">
+      <img src="images/don_burks2.jpg">
       <div class="name">
         don_burks
       </div>
@@ -42,6 +46,7 @@
 
     <div class="member">
       <img src="images/jeremy_shaki.jpg">
+      <img src="images/jeremy_shaki2.jpg">
       <div class="name">
         jeremy_shaki
       </div>
@@ -49,6 +54,7 @@
 
     <div class="member">
       <img src="images/khurram_virani.jpg">
+      <img src="images/khurram_virani2.jpg">
       <div class="name">
         khurram_virani
       </div>
@@ -56,6 +62,7 @@
 
     <div class="member">
       <img src="images/landon.jpg">
+      <img src="images/landon2.jpg">
       <div class="name">
         landon
       </div>
@@ -63,6 +70,7 @@
 
     <div class="member">
       <img src="images/michael_steele.jpg">
+      <img src="images/michael_steele2.jpg">
       <div class="name">
         michael_steele
       </div>
@@ -70,6 +78,7 @@
 
     <div class="member">
       <img src="images/monica.jpg">
+      <img src="images/monica2.jpg">
       <div class="name">
         monica
       </div>
@@ -77,6 +86,7 @@
 
     <div class="member">
       <img src="images/murat.jpg">
+      <img src="images/murat2.jpg">
       <div class="name">
         murat
       </div>
@@ -84,6 +94,7 @@
 
     <div class="member">
       <img src="images/rosy.jpg">
+      <img src="images/rosy2.jpg">
       <div class="name">
         rosy
       </div>
@@ -91,6 +102,7 @@
 
     <div class="member">
       <img src="images/sherman.jpg">
+      <img src="images/sherman2.jpg">
       <div class="name">
         sherman
       </div>
@@ -98,6 +110,7 @@
 
     <div class="member">
       <img src="images/sylvia_rayner.jpg">
+      <img src="images/sylvia_rayner2.jpg">
       <div class="name">
         sylvia_rayner
       </div>
